--- a/program.settings
+++ b/program.settings
@@ -4,12 +4,12 @@
         "1": 8,
         "2": 7,
         "3": 6,
-        "4": 5,
-        "5": 4,
+        "4": 4,
+        "5": 5,
         "6": 3,
         "7": 2,
         "8": 1,
         ">": 1
     },
-    "SHOW_ERRORS_SETTINGS": false
+    "SHOW_ERRORS_SETTINGS": true
 }
