--- a/program.settings
+++ b/program.settings
@@ -1,15 +1,15 @@
 {
-    "DQ_SETTINGS": true,
+    "DQ_SETTINGS": false,
     "POINTS_REFFERENCE_SETTINGS": {
         "1": 8,
         "2": 7,
         "3": 6,
-        "4": 4,
-        "5": 5,
+        "4": 5,
+        "5": 4,
         "6": 3,
         "7": 2,
         "8": 1,
         ">": 1
     },
-    "SHOW_ERRORS_SETTINGS": true
+    "SHOW_ERRORS_SETTINGS": false
 }
